# ***************************** Module Header *******************************
#
# Module Name: configure.in
#
# Make include file to configure src\wis\makefile and the script files
# called by it. This makefile is automatically called by executing
#    nmake all
# in the project working root directory after having build and copied all
# other required files to the appropriate subdirectories of the compile
# directors.
#
# All settings within this file are required, some of them may be
# predefined as environment variables before calling make.
#
# Copyright (c) Netlabs EPM Distribution Project 2002
#
# $Id: configure.in,v 1.20 2009-05-14 21:45:39 aschn Exp $
#
# ===========================================================================
#
# This file is part of the Netlabs EPM Distribution package and is free
# software.  You can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software
# Foundation, in version 2 as it comes in the "COPYING" file of the
# Netlabs EPM Distribution.  This library is distributed in the hope that it
# will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty
# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# ***************************************************************************


# --- Modify the following variables to your needs here
#     or predefine values as environment variable before
#     executing make:

# Set base URL for epm603b.zip and epm603bupd.zip
# There is no other location known to me where these
# two ZIPs are packed like assumed in prepare.cmd!

!ifndef BASEURL
# LEO was the original source, but is not available anymore.
#BASEURL=ftp://ftp.leo.org/pub/comp/os/os2/leo/editors
#
BASEURL=ftp://hobbes.nmsu.edu/pub/os2/apps/editors/epm
#BASEURL=http://hobbes.nmsu.edu/download/pub/os2/apps/editors/epm
!endif

# A directory of your choice either empty or already holding
# the ZIP files of the EPMBBS package (epm603b.zip and epm603bupd.zip).
# If files are not present, they are downloaded using the setting
# for BASEURL - see above
# - the directory may not exist, but at least directory above
#   must exist (that is not tested for!)

!ifndef ZIPSRCDIR
ZIPSRCDIR=$(BASEDIR)\zip
!endif

# Directory where to put unpacked files
# - directory may not exist, but at least directory above
#   must exist (that is not tested for!)
# - the contents of that directory (if any) is completely deleted
#   before unpacking the EPMBBS package files
# - names including blanks are not supported by all
#   build programs yet

!ifndef UNZIPPEDDIR
UNZIPPEDDIR=$(BASEDIR)\epm.packages
!endif

# Append date to the basename of the .wpi file for the debug versions?
# Set this to 1 if you want to have multiple .wpi files for comparison.

!ifndef APPEND_DATE_TO_WPIFILE
#!ifdef DEBUG
APPEND_DATE_TO_WPIFILE=1
#!endif
!endif


# --- DON'T MODIFY THE FOLLOWING VALUES
#     Modification by package maintainer only!

# Project id

STEM=nepmd

# Three to four digit version number included in name of package

VERSION=114

# Version number including dots and optionally with an addition,
# no spaces allowed (used in the WarpIN text)

STRING_VERSION_NEPMD=1.14

# Version number for the NEPMD WarpIN package version
# NOTE:
#  - keep major and minor version number in sync with
#    above version number!
#  - must be specified in WarpIN package ID style
#  - keep in sync with (use Alt+1 to load files under cursor):
#       NEPMD const in src\netlabs\macros\stdconst.e
#       src\gui\recomp\common.h
#       src\gui\recomp\resource.def
#       src\gui\epmcall\common.h
#       src\gui\epmcall\epmcall.def
#       src\gui\nepmdlib\nepmdlib.h
#       src\gui\nepmdlib\nepmdlib.def

ID_VERSION_NEPMD=1\14

# Version number for the WarpIN version that the resulting
# WPI package should be restricted to for installation
# NOTE:
#  - must be specified in WarpIN package ID style

ID_VERSION_REQ_WARPIN=0\9\19

