# ***************************** Module Header *******************************
#
# Module Name: configure.in
#
# make include file to configure src\wis\makefile and the script files
# called by it. This makefile is automatically called by exexuting
#    nmake all
# in the project working root directory after having build and copied all
# other required files to the appropriate subdirectories of the compile
# directors.
#
# All settings within this file are required, some of them may be
# predefined as environment variables before calling make.
#
# Copyright (c) Netlabs EPM Distribution Project 2002
#
# $Id: configure.in,v 1.9 2002-07-23 11:42:55 cla Exp $
#
# ===========================================================================
#
# This file is part of the Netlabs EPM Distribution package and is free
# software.  You can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software
# Foundation, in version 2 as it comes in the "COPYING" file of the
# Netlabs EPM Distribution.  This library is distributed in the hope that it
# will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty
# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# ***************************************************************************


# --- modify the following variables to your needs here
#     or predefine values as environment variable before
#     executing make

# set base URL for epm603.zip and epm603b.zip
# There is no other location known to me where these
# two ZIPs are packed like assumed in prepare.cmd !

!ifndef BASEURL
BASEURL=ftp://ftp.leo.org/pub/comp/os/os2/leo/editors
!endif

# a directory of your choice either empty or already holding
# the ZIP files of the EPMBBS package (epm603.zip and epm603b.zip).
# If files are not present, they are downloaded from LEO
# from the base URL - see setting BASEURL above
# - the directory may not exist, but at least directory above
#   must exist (that is not tested for !)

!ifndef ZIPSRCDIR
ZIPSRCDIR=$(CMPDIR)\zip
!endif

# directory where to put unpacked files
# - directory may not exist, but at least directory above
#   must exist (that is not tested for !)
# - the contents of that directory (if any) is completely deleted
#   before unpacking the EPMBBS package files
# - names including blanks are not supported by all
#   build programs yet

!ifndef UNZIPPEDDIR
UNZIPPEDDIR=$(CMPDIR)\epm.packages
!endif


# --- DON'T MODIFY THE FOLLOWING VALUES
#     Modification by package maintainer only !!!

# project id

STEM=nepmd

# three to four digit version number included in name of package

VERSION=100


# version number for the NEPMD WarpIn package version
# NOTE:
#  - keep major and minor version number in sync with
#    above version number !!!
#  - must be specified in WarpIn package ID style

ID_VERSION_NEPMD=1\0\0


# version number for the WarpIn version that the resulting
# WPI package should be restricted to for installation
# NOTE:
#  - must be specified in WarpIn package ID style

ID_VERSION_REQ_WARPIN=0\9\19

